--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
+    "eslint": "9.31.0",
+    "eslint-config-next": "15.4.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.8.3"
